2008-09-05 Raphael Neider <rneider AT web.de>

	* configure.in, Makefile.common.in: add support for ccache,
	  remove spurious $VERSION output, detect doc-tools even without
	  --enable-doc to facilitate later manual doc-builds, minor cleanup
	* configure: regenerated

	* doc/Makefile.in: quieten pdflatex, makeindex, and latex2html,
	  avoid races in parallel VPATH builds
	* doc/clean.mk: remove .lyx files in the builddir for VPATH builds
	* doc/sdccman.lyx: mention --without-ccache configure option

2008-09-01 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (pic16_derefPtr): handle CPOINTERs as well
	* (genConstPointerGet): fix reading bitfields from __code space
	* src/pic16/glue.c (pic16_printIvalBitFields): correctly mask
	  bitfield initializers (fix regression test bug1856409.c)
	* (pic16_printIvalCharPtr,pic16_printIvalPtr): generalized to support
	  arbitrary sizes

2008-08-31 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genAssign): removed useless compiler output
	* (genPointerGet,genPointerSet,genCast),
	  src/pic16/glue.c (pic16_printGPointerType):
	  also handle PPOINTERs just to avoid spurious asserts
	* (pic16_printIvalType,pic16_printIvalBitFields):
	  generalized to arbitrary type/bitfield sizes, allows compilation of
	  regression test bug-1981238.c
	* (pic16_printIvalChar): fix regression test structflexarray.c
	* (pic16_printIvalArray): avoid SIGSEGV on uninitialized strings
	  in initialized structs and fix #1843745
	* (pic16_printIvalStruct): always output initializers for all fields,
	  even those not explicitly given, fixes zeropad.c regression test
	* (pic16_printIvalUnion): fix union initializers (bug1426356.c,
	  #2073635, #1567098, and #1485812)
	* src/pic16/main.c (_pic16_keywords): remove unsupported 'pdata'

2008-08-31 Borut Razem <borut.razem AT siol.net>

	* support/regression/tests/bug-895992.c,
	  support/regression/tests/onebyte.c:
	  enabled pic16 regression testing since the bugs