@@ -1,0 +1,28 @@
+/*
+    bug 2077267
+*/
+
+#include <testfwk.h>
+
+#ifndef SDCC
+#define __critical
+#endif
+
+void bug(char* x)
+{
+    *x = *x + 1;
+}
+
+void
+testBug(void)
+{
+    char x = 1;
+
+    bug(&x);
+
+    __critical {
+        bug(&x);
+    }
+
+    ASSERT (x == 3);
+}
